<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.NeighbourDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#DEDFE6">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/avatarDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/textNameOnPicture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="20dp"
                        android:layout_alignBottom="@+id/avatarDetail"
                        android:textSize="30dp"
                        android:text="TextView"
                        android:textColor="@android:color/white"/>
                </RelativeLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/favButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_gravity="end"
                    android:layout_marginTop="-28dp"
                    android:layout_marginEnd="12dp"
                    android:backgroundTint="#DEDFE6"
                    app:borderWidth="0dp"
                    android:tint="#FFC107" />

                <LinearLayout
                    android:id="@+id/infoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="-13dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/white">

                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="20dp"
                        android:text="TextView"
                        android:textColor="@android:color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.09"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@android:drawable/ic_menu_mylocation" />

                        <TextView
                            android:id="@+id/textAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:text="TextView" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.12"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@android:drawable/stat_sys_phone_call" />

                        <TextView
                            android:id="@+id/textPhoneNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:text="TextView" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.08"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@android:drawable/ic_menu_mapmode" />

                        <TextView
                            android:id="@+id/textSocial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:text="TextView" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="15dp"
                    android:background="@android:color/white">

                    <TextView
                        android:id="@+id/textAboutTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="20dp"
                        android:textSize="20dp"
                        android:text="A propos de moi"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/textAboutMe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="TextView"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>